--- a/public/css/admin/notifications.css
+++ b/public/css/admin/notifications.css
@@ -4,33 +4,10 @@
   align-content: center;
 }
 body {
-  margin-top: 20px;
   background-color: #f2f6fc;
   color: #69707a;
+  font-family: "Poppins", sans-serif;
 }
-.card {
-  align-content: center;
-  box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 255, 26, 0.15);
-}
-.form-control,
-.dataTable-input {
-  display: block;
-  width: 50%;
-  padding: 0.875rem 1.125rem;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1;
-  color: #69707a;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #c5ccd6;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-radius: 0.35rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
 .nav-borders .nav-link.active {
   color: #0061f2;
   border-bottom-color: #0061f2;
@@ -40,148 +17,66 @@ body {
   border-bottom-width: 0.125rem;
   border-bottom-style: solid;
   border-bottom-color: transparent;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
-
+h1 {
+  font-size: 16px;
+}
+.card {
+  align-content: center;
+  box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 255, 26, 0.15);
+}
+.cb2 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.cb2 h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.btn {
+  color: #ffffff;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 8px 18px;
+  font-size: 16px;
+  font-weight: 700;
+}
 .btn-primary {
   background: linear-gradient(to top, #13cf7d 0%, #3cba92 100%);
   box-shadow: #5df0b0 0 10px 20px -10px;
-  box-sizing: border-box;
-  color: #ffffff;
-  font-weight: bold;
-  cursor: pointer;
-  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
-    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
-    "Noto Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  opacity: 1;
-  outline: 0 solid transparent;
-  padding: 8px 18px;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
-  word-break: break-word;
-  border: 0;
 }
 .btn-primary:hover {
   background: linear-gradient(to top, #01a25c 0%, #019063 100%);
-  /* box-shadow: #5df0b0 0 10px 20px -10px; */
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
-    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
-    "Noto Sans", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  opacity: 1;
-  outline: 0 solid transparent;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
-  word-break: break-word;
 }
 .clear_btn {
-  color: white;
   background-image: linear-gradient(144deg, #ff0000, #ff6c6c 50%, #f80000);
-  border-radius: 10px;
   box-shadow: #ff786e 0 10px 20px -10px;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
-    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
-    "Noto Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  opacity: 1;
-  outline: 0 solid transparent;
-  padding: 8px 18px;
-  position: absolute;
-  right: 3%;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
-  word-break: break-word;
-  border: 0;
+  float: right;
 }
-
 .clear_btn:hover {
-  color: white;
   background-image: linear-gradient(144deg, #9a0606, #f41414 50%, #cb0606);
-  border-radius: 10px;
   box-shadow: #ff786e 0 10px 20px -10px;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
-    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
-    "Noto Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  opacity: 1;
-  padding: 8px 18px;
-  margin-left: 70%;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
-  word-break: break-word;
-  border: 0;
 }
-
-.form-control.success input {
-  border-color: var(--succes-color);
-}
-
-.form-control.error input {
-  border-color: var(--error-color);
-}
-
-.form-control span {
-  color: var(--error-color);
-  visibility: hidden;
-}
-
-.form-control.error span {
-  visibility: visible;
-}
-
 .switch {
-  /* display: inline-block; */
+  margin-bottom: 3px;
   position: relative;
-  width: 50px;
-  height: 25px;
-  /* margin-bottom: 0; */
+  width: 45px;
+  height: 20px;
   border-radius: 20px;
   margin-left: 20px;
-  /* margin-right: 10px; */
   background: #dfd9ea;
   transition: background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-  vertical-align: middle;
   cursor: pointer;
 }
 .switch::before {
   content: "";
   position: absolute;
-  top: 1px;
+  top: 2px;
   left: 2px;
-  width: 22px;
-  height: 22px;
+  width: 16px;
+  height: 16px;
   background: #fafafa;
   border-radius: 50%;
   transition: left 0.28s cubic-bezier(0.4, 0, 0.2, 1),
@@ -200,14 +95,4 @@ input:checked + .switch::before {
 }
 input:checked + .switch:active::before {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.28), 0 0 0 20px rgba(0, 150, 136, 0.2);
-}
-
-.cb2 {
-  font-weight: bold;
-}
-
-#cb-btn2,
-#cb-btn3,
-#cb-btn4 {
-  /* margin-left: 10%; */
 }
