--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -28,7 +28,7 @@
         <!-- Account page navigation-->
         <nav class="nav nav-borders">
           <a class="nav-link" href="/admin/settings">Profile</a>
-          <a class="nav-link active ms-0" href="#">Security</a>
+          <a class="nav-link active" href="#">Security</a>
           <a class="nav-link" href="/admin/notifications">Notifications</a>
         </nav>
         <hr class="mt-0 mb-4" />
