--- a/public/css/admin/notifications.css
+++ b/public/css/admin/notifications.css
@@ -21,6 +21,9 @@ body {
 h1 {
   font-size: 16px;
 }
+.card-header{
+  padding: 15px;
+}
 .card {
   align-content: center;
   box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 255, 26, 0.15);
