--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -25,23 +25,21 @@
     <%- include("./nav.ejs") %>
     <main>
       <div class="container-xl px-4 mt-4">
-        <!-- Account page navigation-->
         <nav class="nav nav-borders">
-          <a class="nav-link" href="/admin/settings">Profile</a>
-          <a class="nav-link active" href="#">Security</a>
-          <a class="nav-link" href="/admin/notifications">Notifications</a>
+          <li><a class="nav-link" href="/admin/settings">Profile</a></li>
+          <li><a class="nav-link active" href="#">Security</a></li>
+          <li>
+            <a class="nav-link" href="/admin/notifications">Notifications</a>
+          </li>
         </nav>
         <hr class="mt-0 mb-4" />
         <div class="row">
-          <div class="col-xl-4"></div>
           <div class="containerAll">
             <div class="col-xl-8">
-              <!-- Account details card-->
               <div class="card mb-4">
-                <div class="card-header">Privacy and security</div>
+                <h1 class="card-header">Privacy and security</h1>
                 <div class="card-body">
                   <form id="UpdateProfile_Form">
-                    <!-- Form Group (username)-->
                     <div class="mb-3">
                       <label class="small mb-1" for="Username"
                         >Change Username (Changing your username can have
@@ -53,9 +51,7 @@
                       </button>
                       <span id="errorUsername" class="error"></span>
                     </div>
-                    <!-- Form Row-->
                     <div class="row gx-3 mb-3">
-                      <!-- Form Group (first name)-->
                       <div class="col-md-6">
                         <label class="small mb-1" for="First Name"
                           >Two-Factor Authentication</label
@@ -67,41 +63,21 @@
                         <span id="errorFirstname" class="error"></span>
                       </div>
                     </div>
-                    <!-- Form Group (email address)-->
-                    <div class="mb-3">
-                      <label class="small mb-1" for="Email Address"
-                        >Change Email address</label
-                      >
-                      <input
-                        class="form-control"
-                        id="Email Address"
-                        type="email"
-                        placeholder="Enter your new email address"
-                        value=""
-                      />
-                      <span id="erroremail"></span>
-                    </div>
-                    <!-- Form Row-->
                     <div class="row gx-3 mb-3">
-                      <!-- Form Group (phone number)-->
                       <div class="col-md-6">
-                        <label class="small mb-1" for="Phone"
-                          >Change Phone number</label
+                        <label class="small mb-1" for="Email Address"
+                          >Change Email address</label
                         >
                         <input
                           class="form-control"
-                          id="Phone"
-                          type="tel"
-                          placeholder="Enter your new phone number"
+                          id="Email Address"
+                          type="email"
+                          placeholder="Enter your new email address"
                           value=""
                         />
+                        <span id="erroremail" class="error"></span>
                       </div>
-                      <!-- Form Row-->
-                      <div class="row gx-3 mb-3">
-                        <!-- Form Group (Project)-->
-                      </div>
-                      <!-- Form Group (Password)-->
-                      <div class="col-md-7">
+                      <div class="col-md-6">
                         <label class="small mb-1" for="Current Password"
                           >Current Password</label
                         >
@@ -115,7 +91,7 @@
                         />
                         <span id="errorCurPassword" class="error"></span>
                       </div>
-                      <div class="col-md-7">
+                      <div class="col-md-6">
                         <label class="small mb-1" for="New Password"
                           >New Password</label
                         >
@@ -129,13 +105,13 @@
                         />
                         <span id="errorNewPassword" class="error"></span>
                       </div>
-                      <div class="col-md-7">
+                      <div class="col-md-6">
                         <label class="small mb-1" for="Confirm Password"
                           >Confirm Password</label
                         >
                         <input
                           class="form-control"
-                          id="Confirm Password"
+                          id="ConfirmPassword"
                           type="Password"
                           name="Confirm Password"
                           placeholder="Confirm your New Password"
@@ -144,11 +120,10 @@
                         <span id="errorConPassword" class="error"></span>
                       </div>
                     </div>
-                    <!-- Save changes button-->
                     <button class="btn btn-primary" type="submit">
                       Save changes
                     </button>
-                    <button class="clear_btn" type="clear">Clear</button>
+                    <button class="btn clear_btn" type="clear">Clear</button>
                   </form>
                 </div>
               </div>
@@ -157,5 +132,92 @@
         </div>
       </div>
     </main>
+    <script>
+      // global variables (for our form validations)
+
+      const userName = document.getElementById("Username");
+      const myForm = document.getElementById("UpdateProfile_Form");
+      const email = document.getElementById("Email Address");
+      // Passwords variables
+
+      const curPassword = document.getElementById("Current Password");
+      const newPassword = document.getElementById("New Password");
+      const conPassword = document.getElementById("Confirm Password");
+
+      //Show input error messages
+      function showError(input, message) {
+        const formControl = input.parentElement;
+        formControl.className = "form-control error";
+        const span = formControl.querySelector("span");
+        span.innerText = message;
+      }
+
+      //show success color
+      function showSucces(input) {
+        const formControl = input.parentElement;
+        formControl.className = "form-control success";
+      }
+
+      //check email is valid
+      function checkEmail(input) {
+        const re =
+          /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        if (re.test(input.value.trim())) {
+          showSucces(input);
+        } else {
+          showError(input, "Email is not invalid");
+        }
+      }
+
+      //checkRequired fields
+      function checkRequired(inputArr) {
+        inputArr.forEach(function (input) {
+          if (input.value.trim() === "") {
+            showError(input, `${getFieldName(input)} is required`);
+          } else {
+            showSucces(input);
+          }
+        });
+      }
+
+      //check input Length
+      function checkLength(input, min, max) {
+        if (input.value.length < min) {
+          showError(
+            input,
+            `${getFieldName(input)} must be at least ${min} characters`
+          );
+        } else if (input.value.length > max) {
+          showError(
+            input,
+            `${getFieldName(input)} must be les than ${max} characters`
+          );
+        } else {
+          showSucces(input);
+        }
+      }
+
+      //get FieldName
+      function getFieldName(input) {
+        return input.id.charAt(0).toUpperCase() + input.id.slice(1);
+      }
+
+      // check passwords match
+      function checkPasswordMatch(input1, input2) {
+        if (input1.value !== input2.value) {
+          showError(input2, "Passwords do not match!");
+        }
+      }
+
+      myForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        checkRequired([email, curPassword, newPassword, conPassword]);
+        checkLength(userName, 4, 15);
+        checkLength(lastName, 4, 15);
+        checkLength(newPassword, 8, 25);
+        checkEmail(email);
+        checkPasswordMatch(newPassword, conPassword);
+      });
+    </script>
   </body>
 </html>
