--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -167,9 +167,10 @@
                           </a>
                         </li>
                         <li>
-                          <button class="btn">
-                            <i class="fa-solid fa-ban ban"></i>Ban
-                          </button>
+                          <a class="btn" href="/admin/ban/<%= item.id %>">
+                            <i class="fa-solid fa-ban ban"></i>
+                            Ban
+                          </a>
                         </li>
                       </ul>
                     </div>
