--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -161,13 +161,13 @@
                           </button>
                         </li>
                         <li>
-                          <a class="btn" href="/admin/delete/<%= item.id %>">
+                          <a class="delete" href="/admin/delete/<%= item.id %>">
                             <i class="fa-solid fa-trash delete"></i>
                             Remove
                           </a>
                         </li>
                         <li>
-                          <a class="btn" href="/admin/ban/<%= item.id %>">
+                          <a class="ban" href="/admin/ban/<%= item.id %>">
                             <i class="fa-solid fa-ban ban"></i>
                             Ban
                           </a>
