fixed the resend button bug

--- a/public/css/registration/forgetpassword.css
+++ b/public/css/registration/forgetpassword.css
@@ -28,6 +28,7 @@ body::after {
 #otpPart {
   display: none;
 }
+.formaya,
 form {
   width: 400px;
   background-color: rgba(255, 255, 255, 0.03);
@@ -42,13 +43,14 @@ form {
   padding: 50px 35px;
   z-index: 2;
 }
-form * {
+form *,
+.formaya * {
   color: #ffffff;
   letter-spacing: 0.5px;
   outline: none;
   border: none;
 }
-form h1 {
+h1 {
   font-size: 28px;
   font-weight: 500;
   line-height: 42px;
@@ -136,31 +138,3 @@ button:hover {
   text-decoration: underline;
   background: transparent;
 }
-
-/* //////////////////////////////////////////////////////////// */
-/* .space {
-  margin: 0 8px;
-  font-size: 50px;
-}
-.pass {
-  display: none;
-}
-.password-input {
-  position: relative;
-}
-.toggle-password {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-.toggle-password:hover {
-  color: blue; /* Optional: Change the color on hover */
-
-/* .anchors {
-    display: flex;
-    margin-top: 15px;
-    justify-content: center;
-    align-items: center;
-  }  */
