--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -36,7 +36,7 @@
       </section>
       <!-- ///////////////////////////////////////////////////////////// -->
       <section class="otp" id="otpPart">
-        <form>
+        <div class="formaya">
           <h1>Enter the OTP</h1>
           <div class="otp-field">
             <input type="text" maxlength="1" />
@@ -51,7 +51,7 @@
             <a href="/forgetpassword" class="change-email">Change email ?</a>
           </div>
           <p style="color: red" id="error2"></p>
-        </form>
+        </div>
       </section>
       <!-- ////////////////////////////////////////////////////////////////// -->
       <section class="change-password" id="changePasswordPart">
